Sat Mar 15 00:06:08 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* snarf.h: g++ says it's non-portable not to specify the first
 	argument in a varargs declaration.  I introduced the first
 	argument by using preprocessor conditionals.

Thu Mar 13 21:28:25 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* ioext.c (scm_read_delimited_x): use RO string macros for delims.
	(scm_freopen): use RO string macros for filename and modes.
	(scm_duplicate_port, scm_fdopen): use RO string macros for modes.

	* posix.c (scm_getgrgid): simplify conversion of name to C string.
	(scm_mknod): use RO string macros for path.

	* socket.c (scm_fill_sockaddr, scm_send, scm_sendto):
	use SCM_ROSTRINGP, SCM_ROCHARS, SCM_ROLENGTH.
	
	* net_db.c (scm_gethost, scm_getnet, scm_getproto, scm_getserv):
	use SCM_ROSTRINGP and SCM_ROCHARS.

Thu Mar 13 18:31:33 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* unif.c (scm_array_set_x): Cast ICHR (obj) to char if storing in
	a scm_tc7_byvect.

	* ramap.c (scm_ra_matchp, scm_ra_matchp, scm_array_fill_int, racp,
 	scm_array_index_map_x, raeql_1, scm_array_equal_p): Completed
 	support for byte vectors.

	* print.c (scm_iprin1): Limit number of vector elements printed
	according to pstate->length.

Thu Mar 13 00:12:35 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* backtrace.c (scm_display_error_message): don't segv if message
	is an immediate.

	* error.h: prototype for scm_error_scm.

	* error.c (scm_error_scm): new procedure, reimplements scm-error
	in C and uses scm_error.

Tue Mar 11 03:51:00 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* read.c (scm_read_hash_extend): make scm_read_hash_procedures a 
	pointer to the Scheme variable read-hash-procedures and intern it
 	in scm_init_read. Modify scm_read_hash_extend and 
	scm_get_hash_procedure to use the pointer.

Mon Mar 10 06:28:54 1997  Gary Houston  <ghouston@actrix.gen.nz>	

	* read.h (SCM_N_READ_OPTIONS): increase SCM_N_READ_OPTIONS to 4.
	(SCM_KEYWORD_STYLE): defined.
